[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "busty"
version = "0.1.0"
description = "A Discord bot for playing music and managing media"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["discord", "bot", "music", "media"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "discord_emoji>=1.4.1",
    "mutagen>=1.47.0",
    "discord.py[voice] @ git+https://github.com/Rapptz/discord.py.git@cb7300990f656c0964ea48115354f9416e96dcd1",
    "PyNaCl>=1.5.0",
    "google-api-python-client>=2.57.0",
    "oauth2client>=4.1.3",
    "pillow>=11.3.0",
    "openai>=1.1.0",
    "tiktoken>=0.3.1",
]

[project.scripts]
busty = "busty.main:run_bot"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
